--- a/estilo/style.css
+++ b/estilo/style.css
@@ -74,7 +74,7 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     text-shadow: 4px 4px 5px rgba(0, 0, 0, 0.514);
 }
 
